<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sourceLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:padding="12dp"
        android:text="@string/translate_empty_language"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/swapDirections"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="source text language" />

    <ImageView
        android:id="@+id/swapDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_compare_arrows_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/sourceLanguage"
        app:layout_constraintEnd_toStartOf="@id/targetLanguage"
        app:layout_constraintStart_toEndOf="@id/sourceLanguage"
        app:layout_constraintTop_toTopOf="@id/sourceLanguage" />

    <TextView
        android:id="@+id/targetLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:padding="12dp"
        android:text="@string/translate_empty_language"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/swapDirections"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="target text language" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sourceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/translate_enter_text_hint"
        android:imeOptions="actionGo"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sourceLanguage" />

    <TextView
        android:id="@+id/translatedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/sourceText"
        app:layout_constraintStart_toStartOf="@id/sourceText"
        app:layout_constraintTop_toBottomOf="@id/sourceText"
        tools:text="Translated text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/translateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_button"
        app:layout_constraintTop_toBottomOf="@id/translatedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        app:layout_constraintTop_toBottomOf="@id/translateButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favoriteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_title"
        app:layout_constraintTop_toBottomOf="@id/historyButton" />


</androidx.constraintlayout.widget.ConstraintLayout>